# System-On-Chip-Design

./: README.md
LAB1/software/: main.c  main.cpp
LAB2/hardware/: CMakeLists.txt  main.c
LAB2/hardware/.cache/clangd/index/: main.c.9D4A20000F8FEE1A.idx
LAB2/software/: bitmask.c
